--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,7 +30,11 @@ resources.router.routes.post.route = ":type/:id/:slug/:action/*"
 
 resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = ":type/:id/:slug/:action/*"
-resources.router.routes.record.reqs.type = "project|blogroll"
+resources.router.routes.record.reqs.type = "item"
+
+resources.router.routes.record.type = "Epic_Route_Record"
+resources.router.routes.record.route = "item/:id"
+resources.router.routes.record.defaults.type = "item"
 
 resources.router.routes.user.type = "Epic_Route_User"
 resources.router.routes.user.route = ":type/:id/:slug/:action/*"
