Another batch of updates

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -36,6 +36,10 @@ resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = "item/:id"
 resources.router.routes.record.defaults.type = "item"
 
+resources.router.routes.record.type = "Epic_Route_Record"
+resources.router.routes.record.route = "i/:id"
+resources.router.routes.record.defaults.type = "item"
+
 resources.router.routes.user.type = "Epic_Route_User"
 resources.router.routes.user.route = ":type/:id/:slug/:action/*"
 
