Added Sockets to Items Added User layer w/ Login Started work on Heroes

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,15 +30,16 @@ resources.router.routes.post.route = ":type/:id/:slug/:action/*"
 
 resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = ":type/:id/:slug/:action/*"
-resources.router.routes.record.reqs.type = "item"
+resources.router.routes.record.reqs.type = "item|i|hero|h"
 
-resources.router.routes.record.type = "Epic_Route_Record"
-resources.router.routes.record.route = "item/:id"
-resources.router.routes.record.defaults.type = "item"
+resources.router.routes.item.type = "Epic_Route_Record"
+resources.router.routes.item.route = "i/:id"
+resources.router.routes.item.defaults.type = "item"
 
-resources.router.routes.record.type = "Epic_Route_Record"
-resources.router.routes.record.route = "i/:id"
-resources.router.routes.record.defaults.type = "item"
+resources.router.routes.hero.type = "Epic_Route_Record"
+resources.router.routes.hero.route = "h/:id"
+resources.router.routes.hero.defaults.type = "hero"
+
 
 resources.router.routes.user.type = "Epic_Route_User"
 resources.router.routes.user.route = ":type/:id/:slug/:action/*"
