Initial Character Planner

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -33,8 +33,9 @@ resources.router.routes.record.route = ":type/:id/:slug/:action/*"
 resources.router.routes.record.reqs.type = "item|i|hero|h"
 
 resources.router.routes.item.type = "Epic_Route_Record"
-resources.router.routes.item.route = "i/:id"
+resources.router.routes.item.route = "i/:id/:action"
 resources.router.routes.item.defaults.type = "item"
+resources.router.routes.item.defaults.action = "view"
 
 resources.router.routes.hero.type = "Epic_Route_Record"
 resources.router.routes.hero.route = "h/:id"
