--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,16 +30,20 @@ resources.router.routes.post.route = ":type/:id/:slug/:action/*"
 
 resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = ":type/:id/:slug/:action/*"
-resources.router.routes.record.reqs.type = "item|i|hero|h"
+resources.router.routes.record.reqs.type = "item|i|build|h"
 
 resources.router.routes.item.type = "Epic_Route_Record"
 resources.router.routes.item.route = "i/:id/:action"
 resources.router.routes.item.defaults.type = "item"
 resources.router.routes.item.defaults.action = "view"
 
-resources.router.routes.hero.type = "Epic_Route_Record"
-resources.router.routes.hero.route = "h/:id"
-resources.router.routes.hero.defaults.type = "hero"
+resources.router.routes.build.type = "Epic_Route_Record"
+resources.router.routes.build.route = "b/:id"
+resources.router.routes.build.defaults.type = "build"
+
+resources.router.routes.build_old.type = "Epic_Route_Record"
+resources.router.routes.build_old.route = "h/:id"
+resources.router.routes.build_old.defaults.type = "build"
 
 
 resources.router.routes.user.type = "Epic_Route_User"
