Updated app.ini w/ new route.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -38,8 +38,9 @@ resources.router.routes.item.defaults.type = "item"
 resources.router.routes.item.defaults.action = "view"
 
 resources.router.routes.build.type = "Epic_Route_Record"
-resources.router.routes.build.route = "b/:id"
+resources.router.routes.build.route = "b/:id/:action"
 resources.router.routes.build.defaults.type = "build"
+resources.router.routes.build.defaults.action = "view"
 
 resources.router.routes.build_old.type = "Epic_Route_Record"
 resources.router.routes.build_old.route = "h/:id"
