Builds page, guides and few tweaks

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,6 +27,7 @@ resources.view.helperPath.D3Up_View_Helper = APPLICATION_PATH "/../library/D3Up/
 
 resources.router.routes.post.type = "Epic_Route_Post"
 resources.router.routes.post.route = ":type/:id/:slug/:action/*"
+resources.router.routes.post.reqs.type = "comment|c"
 
 resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = ":type/:id/:slug/:action/*"
@@ -46,6 +47,10 @@ resources.router.routes.build_old.type = "Epic_Route_Record"
 resources.router.routes.build_old.route = "h/:id"
 resources.router.routes.build_old.defaults.type = "build"
 
+resources.router.routes.comment.type = "Epic_Route_Post"
+resources.router.routes.comment.route = "c/:id/:action"
+resources.router.routes.comment.defaults.type = "comment"
+resources.router.routes.comment.defaults.action = "view"
 
 resources.router.routes.user.type = "Epic_Route_User"
 resources.router.routes.user.route = ":type/:id/:slug/:action/*"
