--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -47,6 +47,20 @@ resources.router.routes.build_old.type = "Epic_Route_Record"
 resources.router.routes.build_old.route = "h/:id"
 resources.router.routes.build_old.defaults.type = "build"
 
+resources.router.routes.update.type = "Epic_Route_Post"
+resources.router.routes.update.route = "update/:id/*"
+resources.router.routes.update.reqs.type = "update"
+resources.router.routes.update.defaults.type = "update"
+
+
+resources.router.routes.updates.type = "Zend_Controller_Router_Route"
+resources.router.routes.updates.route = "updates/:action/*"
+resources.router.routes.updates.defaults.controller = "post"
+resources.router.routes.updates.defaults.action = "list"
+resources.router.routes.updates.defaults.type = "update"
+resources.router.routes.updates.reqs.type = "update"
+
+
 resources.router.routes.comment.type = "Epic_Route_Post"
 resources.router.routes.comment.route = "c/:id/:action"
 resources.router.routes.comment.defaults.type = "comment"
