Huge revamp to styles Starting of Bazaar Item Interface improvements.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -31,7 +31,7 @@ resources.router.routes.post.reqs.type = "comment|c"
 
 resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = ":type/:id/:slug/:action/*"
-resources.router.routes.record.reqs.type = "item|i|build|h"
+resources.router.routes.record.reqs.type = "item|i|build|h|shop|s|sale"
 
 resources.router.routes.item.type = "Epic_Route_Record"
 resources.router.routes.item.route = "i/:id/:action"
@@ -43,6 +43,31 @@ resources.router.routes.build.route = "b/:id/:action"
 resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
 
+resources.router.routes.shop.type = "Epic_Route_Record"
+resources.router.routes.shop.route = "shop/:id"
+resources.router.routes.shop.defaults.type = "shop"
+resources.router.routes.shop.defaults.action = "view"
+                        
+resources.router.routes.sale.type = "Epic_Route_Record"
+resources.router.routes.sale.route = "sale/:id/:action"
+resources.router.routes.sale.defaults.type = "sale"
+resources.router.routes.sale.defaults.action = "view"
+
+resources.router.routes.bazaar.type = "Zend_Controller_Router_Route"
+resources.router.routes.bazaar.route = "bazaar/*"
+resources.router.routes.bazaar.defaults.controller = "item"
+resources.router.routes.bazaar.defaults.action = "bazaar"
+
+resources.router.routes.items.type = "Zend_Controller_Router_Route"
+resources.router.routes.items.route = "items/*"
+resources.router.routes.items.defaults.controller = "item"
+resources.router.routes.items.defaults.action = "index"
+
+resources.router.routes.shop_short.type = "Epic_Route_Record"
+resources.router.routes.shop_short.route = "s/:id"
+resources.router.routes.shop_short.defaults.type = "shop"
+resources.router.routes.shop_short.defaults.action = "view"
+
 resources.router.routes.build_old.type = "Epic_Route_Record"
 resources.router.routes.build_old.route = "h/:id"
 resources.router.routes.build_old.defaults.type = "build"
@@ -52,14 +77,12 @@ resources.router.routes.update.route = "update/:id/*"
 resources.router.routes.update.reqs.type = "update"
 resources.router.routes.update.defaults.type = "update"
 
-
 resources.router.routes.updates.type = "Zend_Controller_Router_Route"
 resources.router.routes.updates.route = "updates/:action/*"
 resources.router.routes.updates.defaults.controller = "post"
 resources.router.routes.updates.defaults.action = "list"
 resources.router.routes.updates.defaults.type = "update"
 resources.router.routes.updates.reqs.type = "update"
-
 
 resources.router.routes.comment.type = "Epic_Route_Post"
 resources.router.routes.comment.route = "c/:id/:action"
