--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -58,6 +58,12 @@ resources.router.routes.bazaar.route = "bazaar/*"
 resources.router.routes.bazaar.defaults.controller = "item"
 resources.router.routes.bazaar.defaults.action = "bazaar"
 
+resources.router.routes.faq.type = "Zend_Controller_Router_Route"
+resources.router.routes.faq.route = "faq/:faq/*"
+resources.router.routes.faq.defaults.controller = "index"
+resources.router.routes.faq.defaults.action = "faq"
+resources.router.routes.faq.defaults.faq = "home"
+
 resources.router.routes.items.type = "Zend_Controller_Router_Route"
 resources.router.routes.items.route = "items/*"
 resources.router.routes.items.defaults.controller = "item"
