I can edit updates now, yay!

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -79,7 +79,7 @@ resources.router.routes.build_old.route = "h/:id"
 resources.router.routes.build_old.defaults.type = "build"
 
 resources.router.routes.update.type = "Epic_Route_Post"
-resources.router.routes.update.route = "update/:id/*"
+resources.router.routes.update.route = "update/:id/:action/*"
 resources.router.routes.update.reqs.type = "update"
 resources.router.routes.update.defaults.type = "update"
 
