--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -98,6 +98,10 @@ resources.router.routes.comment.defaults.action = "view"
 resources.router.routes.user.type = "Epic_Route_User"
 resources.router.routes.user.route = ":type/:id/:slug/:action/*"
 
+[staging : production]
+
+resources.mongo.default.database = "com_d3up_beta"
+
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
