--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -100,6 +100,8 @@ resources.router.routes.user.route = ":type/:id/:slug/:action/*"
 
 [staging : production]
 
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
 resources.mongo.default.database = "com_d3up_beta"
 
 [development : production]
