--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -58,6 +58,11 @@ resources.router.routes.bazaar.route = "bazaar/*"
 resources.router.routes.bazaar.defaults.controller = "item"
 resources.router.routes.bazaar.defaults.action = "bazaar"
 
+resources.router.routes.faqs.type = "Zend_Controller_Router_Route"
+resources.router.routes.faqs.route = "faqs"
+resources.router.routes.faqs.defaults.controller = "index"
+resources.router.routes.faqs.defaults.action = "faqs"
+
 resources.router.routes.faq.type = "Zend_Controller_Router_Route"
 resources.router.routes.faq.route = "faq/:faq/*"
 resources.router.routes.faq.defaults.controller = "index"
