Started guides, updated max values, new sys message, new attribute handling (to save in one spot), and other fixes.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,7 +27,7 @@ resources.view.helperPath.D3Up_View_Helper = APPLICATION_PATH "/../library/D3Up/
 
 resources.router.routes.post.type = "Epic_Route_Post"
 resources.router.routes.post.route = ":type/:id/:slug/:action/*"
-resources.router.routes.post.reqs.type = "comment|c"
+resources.router.routes.post.reqs.type = "comment|c|guide|g"
 
 resources.router.routes.record.type = "Epic_Route_Record"
 resources.router.routes.record.route = ":type/:id/:slug/:action/*"
@@ -42,6 +42,20 @@ resources.router.routes.build.type = "Epic_Route_Record"
 resources.router.routes.build.route = "b/:id/:action"
 resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
+
+resources.router.routes.guide_short.type = "Epic_Route_Post"
+resources.router.routes.guide_short.route = "g/:id/:slug/:action"
+resources.router.routes.guide_short.defaults.controller = "guide"
+resources.router.routes.guide_short.defaults.type = "guide"
+resources.router.routes.guide_short.defaults.slug = "-"
+resources.router.routes.guide_short.defaults.action = "view"
+
+resources.router.routes.guide.type = "Epic_Route_Post"
+resources.router.routes.guide.route = "guide/:id/:slug/:action"
+resources.router.routes.guide.defaults.controller = "guide"
+resources.router.routes.guide.defaults.type = "guide"
+resources.router.routes.guide.defaults.slug = "-"
+resources.router.routes.guide.defaults.action = "view"
 
 resources.router.routes.shop.type = "Epic_Route_Record"
 resources.router.routes.shop.route = "shop/:id"
