--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -51,7 +51,7 @@ resources.router.routes.guide_short.defaults.slug = "-"
 resources.router.routes.guide_short.defaults.action = "view"
 
 resources.router.routes.guide.type = "Epic_Route_Post"
-resources.router.routes.guide.route = "guide/:id/:slug/:action"
+resources.router.routes.guide.route = "guide/:id/:slug/:action/*"
 resources.router.routes.guide.defaults.controller = "guide"
 resources.router.routes.guide.defaults.type = "guide"
 resources.router.routes.guide.defaults.slug = "-"
