--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -43,6 +43,11 @@ resources.router.routes.build.route = "b/:id/:action"
 resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
 
+resources.router.routes.buildsbytag.type = "Zend_Controller_Router_Route"
+resources.router.routes.buildsbytag.route = "bt/:bt"
+resources.router.routes.buildsbytag.defaults.controller = "build"
+resources.router.routes.buildsbytag.defaults.action = "taglist"
+
 resources.router.routes.guide_short.type = "Epic_Route_Post"
 resources.router.routes.guide_short.route = "g/:id/:slug/:action"
 resources.router.routes.guide_short.defaults.controller = "guide"
