--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -44,7 +44,7 @@ resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
 
 resources.router.routes.buildsbytag.type = "Zend_Controller_Router_Route"
-resources.router.routes.buildsbytag.route = "bt/:bt"
+resources.router.routes.buildsbytag.route = "tag/:bt"
 resources.router.routes.buildsbytag.defaults.controller = "build"
 resources.router.routes.buildsbytag.defaults.action = "taglist"
 
