--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -44,14 +44,16 @@ resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
 
 resources.router.routes.buildsbytag.type = "Zend_Controller_Router_Route"
-resources.router.routes.buildsbytag.route = "tag/:bt"
+resources.router.routes.buildsbytag.route = "tag/:bt/:rg"
 resources.router.routes.buildsbytag.defaults.controller = "build"
 resources.router.routes.buildsbytag.defaults.action = "taglist"
+resources.router.routes.buildsbytagalt.defaults.rg = ""
 
 resources.router.routes.buildsbytagalt.type = "Zend_Controller_Router_Route"
-resources.router.routes.buildsbytagalt.route = "profile/:bt"
+resources.router.routes.buildsbytagalt.route = "profile/:bt/:rg"
 resources.router.routes.buildsbytagalt.defaults.controller = "build"
 resources.router.routes.buildsbytagalt.defaults.action = "taglist"
+resources.router.routes.buildsbytagalt.defaults.rg = ""
 
 resources.router.routes.guide_short.type = "Epic_Route_Post"
 resources.router.routes.guide_short.route = "g/:id/:slug/:action"
