--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -47,7 +47,7 @@ resources.router.routes.buildsbytag.type = "Zend_Controller_Router_Route"
 resources.router.routes.buildsbytag.route = "tag/:bt/:rg"
 resources.router.routes.buildsbytag.defaults.controller = "build"
 resources.router.routes.buildsbytag.defaults.action = "taglist"
-resources.router.routes.buildsbytagalt.defaults.rg = ""
+resources.router.routes.buildsbytag.defaults.rg = ""
 
 resources.router.routes.buildsbytagalt.type = "Zend_Controller_Router_Route"
 resources.router.routes.buildsbytagalt.route = "profile/:bt/:rg"
