--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -43,6 +43,17 @@ resources.router.routes.build.route = "b/:id/:action"
 resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
 
+resources.router.routes.group.type = "Zend_Controller_Router_Route"
+resources.router.routes.group.route = "group/:id/:action/*"
+resources.router.routes.group.defaults.controller = "group"
+resources.router.routes.group.defaults.type = "group"
+resources.router.routes.group.defaults.action = "view"
+
+resources.router.routes.group_created.type = "Zend_Controller_Router_Route"
+resources.router.routes.group_created.route = "group/create"
+resources.router.routes.group_created.defaults.controller = "group"
+resources.router.routes.group_created.defaults.action = "create"
+
 resources.router.routes.buildsbytag.type = "Zend_Controller_Router_Route"
 resources.router.routes.buildsbytag.route = "tag/:bt/:rg"
 resources.router.routes.buildsbytag.defaults.controller = "build"
