Added a Search Box that searches by Battle Tag.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -60,6 +60,13 @@ resources.router.routes.buildsbytag.defaults.controller = "build"
 resources.router.routes.buildsbytag.defaults.action = "taglist"
 resources.router.routes.buildsbytag.defaults.rg = ""
 
+resources.router.routes.buildsearch.type = "Zend_Controller_Router_Route"
+resources.router.routes.buildsearch.route = "search"
+resources.router.routes.buildsearch.defaults.controller = "build"
+resources.router.routes.buildsearch.defaults.action = "search"
+resources.router.routes.buildsearch.defaults.rg = ""
+
+
 resources.router.routes.buildsbytagalt.type = "Zend_Controller_Router_Route"
 resources.router.routes.buildsbytagalt.route = "profile/:bt/:rg"
 resources.router.routes.buildsbytagalt.defaults.controller = "build"
