--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -39,7 +39,7 @@ resources.router.routes.item.defaults.type = "item"
 resources.router.routes.item.defaults.action = "view"
 
 resources.router.routes.build.type = "Epic_Route_Record"
-resources.router.routes.build.route = "b/:id/:action"
+resources.router.routes.build.route = "b/:id/:action/*"
 resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
 
@@ -59,6 +59,11 @@ resources.router.routes.buildsbytag.route = "tag/:bt/:rg"
 resources.router.routes.buildsbytag.defaults.controller = "build"
 resources.router.routes.buildsbytag.defaults.action = "taglist"
 resources.router.routes.buildsbytag.defaults.rg = ""
+
+resources.router.routes.buildviabattletag.type = "D3Up_Route_BattleTag"
+resources.router.routes.buildviabattletag.route = "bt/:bt/:id/:action/*"
+resources.router.routes.buildviabattletag.defaults.type = "build"
+resources.router.routes.buildviabattletag.defaults.action = "view"
 
 resources.router.routes.buildsearch.type = "Zend_Controller_Router_Route"
 resources.router.routes.buildsearch.route = "search"
