Fixed those strange links it's been making for a while.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -39,9 +39,16 @@ resources.router.routes.item.defaults.type = "item"
 resources.router.routes.item.defaults.action = "view"
 
 resources.router.routes.build.type = "Epic_Route_Record"
-resources.router.routes.build.route = "b/:id/:action/*"
+resources.router.routes.build.route = "b/:id/:slug/:action/*"
 resources.router.routes.build.defaults.type = "build"
 resources.router.routes.build.defaults.action = "view"
+resources.router.routes.build.defaults.slug = "unknown"
+
+resources.router.routes.build_legacy.type = "Epic_Route_Record"
+resources.router.routes.build_legacy.route = "b/:id/view/slug/:slug/*"
+resources.router.routes.build_legacy.defaults.type = "build"
+resources.router.routes.build_legacy.defaults.action = "view"
+resources.router.routes.build_legacy.defaults.slug = "unknown"
 
 resources.router.routes.group.type = "Zend_Controller_Router_Route"
 resources.router.routes.group.route = "group/:id/:action/*"
