Reworked some URI logic again, it's sloppy, but going away soon.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -50,6 +50,34 @@ resources.router.routes.build_legacy.defaults.type = "build"
 resources.router.routes.build_legacy.defaults.action = "view"
 resources.router.routes.build_legacy.defaults.slug = "unknown"
 
+resources.router.routes.build_tooltip.type = "Epic_Route_Record"
+resources.router.routes.build_tooltip.route = "b/:id/tooltip"
+resources.router.routes.build_tooltip.defaults.controller = "record"
+resources.router.routes.build_tooltip.defaults.type = "build"
+resources.router.routes.build_tooltip.defaults.action = "tooltip"
+resources.router.routes.build_tooltip.defaults.slug = "unknown"
+
+resources.router.routes.build_json.type = "Epic_Route_Record"
+resources.router.routes.build_json.route = "b/:id/json"
+resources.router.routes.build_json.defaults.controller = "record"
+resources.router.routes.build_json.defaults.type = "build"
+resources.router.routes.build_json.defaults.action = "json"
+resources.router.routes.build_json.defaults.slug = "unknown"
+
+resources.router.routes.build_json.type = "Epic_Route_Record"
+resources.router.routes.build_json.route = "b/:id/resync"
+resources.router.routes.build_json.defaults.controller = "record"
+resources.router.routes.build_json.defaults.type = "build"
+resources.router.routes.build_json.defaults.action = "resync"
+resources.router.routes.build_json.defaults.slug = "unknown"
+
+resources.router.routes.build_json.type = "Epic_Route_Record"
+resources.router.routes.build_json.route = "b/:id/update-stats"
+resources.router.routes.build_json.defaults.controller = "record"
+resources.router.routes.build_json.defaults.type = "build"
+resources.router.routes.build_json.defaults.action = "update-stats"
+resources.router.routes.build_json.defaults.slug = "unknown"
+
 resources.router.routes.group.type = "Zend_Controller_Router_Route"
 resources.router.routes.group.route = "group/:id/:action/*"
 resources.router.routes.group.defaults.controller = "group"
