--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -64,19 +64,19 @@ resources.router.routes.build_json.defaults.type = "build"
 resources.router.routes.build_json.defaults.action = "json"
 resources.router.routes.build_json.defaults.slug = "unknown"
 
-resources.router.routes.build_json.type = "Epic_Route_Record"
-resources.router.routes.build_json.route = "b/:id/resync"
-resources.router.routes.build_json.defaults.controller = "record"
-resources.router.routes.build_json.defaults.type = "build"
-resources.router.routes.build_json.defaults.action = "resync"
-resources.router.routes.build_json.defaults.slug = "unknown"
+resources.router.routes.build_resync.type = "Epic_Route_Record"
+resources.router.routes.build_resync.route = "b/:id/resync"
+resources.router.routes.build_resync.defaults.controller = "record"
+resources.router.routes.build_resync.defaults.type = "build"
+resources.router.routes.build_resync.defaults.action = "resync"
+resources.router.routes.build_resync.defaults.slug = "unknown"
 
-resources.router.routes.build_json.type = "Epic_Route_Record"
-resources.router.routes.build_json.route = "b/:id/update-stats"
-resources.router.routes.build_json.defaults.controller = "record"
-resources.router.routes.build_json.defaults.type = "build"
-resources.router.routes.build_json.defaults.action = "update-stats"
-resources.router.routes.build_json.defaults.slug = "unknown"
+resources.router.routes.build_stats.type = "Epic_Route_Record"
+resources.router.routes.build_stats.route = "b/:id/update-stats"
+resources.router.routes.build_stats.defaults.controller = "record"
+resources.router.routes.build_stats.defaults.type = "build"
+resources.router.routes.build_stats.defaults.action = "update-stats"
+resources.router.routes.build_stats.defaults.slug = "unknown"
 
 resources.router.routes.group.type = "Zend_Controller_Router_Route"
 resources.router.routes.group.route = "group/:id/:action/*"
