--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -78,6 +78,13 @@ resources.router.routes.build_stats.defaults.type = "build"
 resources.router.routes.build_stats.defaults.action = "update-stats"
 resources.router.routes.build_stats.defaults.slug = "unknown"
 
+resources.router.routes.build_copy.type = "Epic_Route_Record"
+resources.router.routes.build_copy.route = "b/:id/copy"
+resources.router.routes.build_copy.defaults.controller = "record"
+resources.router.routes.build_copy.defaults.type = "build"
+resources.router.routes.build_copy.defaults.action = "copy"
+resources.router.routes.build_copy.defaults.slug = "unknown"
+
 resources.router.routes.group.type = "Zend_Controller_Router_Route"
 resources.router.routes.group.route = "group/:id/:action/*"
 resources.router.routes.group.defaults.controller = "group"
